# ALKHORA_Cloud

./: DEPLOYMENT_GUIDE.md  LICENSE  NEXTCLOUD_SETUP_GUIDE.md  SSH_SETUP_GUIDE.md  pyproject.toml  requirements.txt  setup.py
nextcloud_integration/: .gitignore  README.md  __init__.py  hooks.py  manifest.json  nextcloud_api.py  setup.py
nextcloud_integration/doctype/nextcloud_settings/: nextcloud_settings.json
nextcloud_integration/doctype/opportunity_nextcloud_button/: opportunity_nextcloud_button.json
nextcloud_integration/nextcloud_integration/: __init__.py  api.py  hooks.py  modules.txt  nextcloud_api.py  patches.txt
nextcloud_integration/nextcloud_integration/doctype/nextcloud_settings/: nextcloud_settings.json  nextcloud_settings.py
nextcloud_integration/nextcloud_integration/doctype/nextcloud_settings_test_button/: __init__.py  nextcloud_settings_test_button.json
nextcloud_integration/nextcloud_integration/doctype/opportunity_nextcloud_button/: opportunity_nextcloud_button.json
nextcloud_integration/nextcloud_integration/public/js/: nextcloud_integration.js
