[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nextcloud_integration"
version = "0.0.1"
description = "Automatically create Nextcloud folders for new opportunities"
authors = [
    {name = "ALKHORA", email = "support@alkhora.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0"
]

[tool.setuptools]
packages = {find = {}}
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.txt", "public/**/*", "templates/**/*", "www/**/*"]
